Fixed nav width on smaller screens

--- a/css/new.css
+++ b/css/new.css
@@ -264,7 +264,7 @@ nav ul {
   padding: 0;
   margin: 0;
   background: var(--color-light);
-  width: 30vw;
+  width: fit-content;
   height: 100vh;
   transition: transform 400ms;
   transform: scale(0,1);
@@ -276,6 +276,7 @@ nav li {
   text-align: right;
   line-height: 3;
   margin-right: 1.5em;
+  margin-left: 1.5em;
 }
 
 .navShowHide {
